Fix spec compliance of getComputedTiming().progress.

Bug: 827616
Change-Id: I874cce34e52d53e8ec52799343f8da8e8a50a2ab
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1569553
Commit-Queue: Kevin Ellis <kevers@chromium.org>
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#651858}
Former-commit-id: 59aff5d992638d22a50c9c2280d15025e329e841